// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-utretm,
[data-css-utretm] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-utretm > div,
[data-css-utretm] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-utretm > div:nth-of-type(1),
[data-css-utretm] > div:nth-of-type(1) {
  top: 50px;
}

.css-utretm > div:nth-of-type(2),
[data-css-utretm] > div:nth-of-type(2) {
  left: 25px;
}

.css-utretm > div:nth-of-type(3),
[data-css-utretm] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<BallTrianglePath
  loading={true}
>
  <div
    data-css-utretm=""
  >
    <div />
    <div />
    <div />
  </div>
</BallTrianglePath>
`;

exports[`enzyme.render 1`] = `
.css-utretm,
[data-css-utretm] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-utretm > div,
[data-css-utretm] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-utretm > div:nth-of-type(1),
[data-css-utretm] > div:nth-of-type(1) {
  top: 50px;
}

.css-utretm > div:nth-of-type(2),
[data-css-utretm] > div:nth-of-type(2) {
  left: 25px;
}

.css-utretm > div:nth-of-type(3),
[data-css-utretm] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-utretm=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-utretm,
[data-css-utretm] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-utretm > div,
[data-css-utretm] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-utretm > div:nth-of-type(1),
[data-css-utretm] > div:nth-of-type(1) {
  top: 50px;
}

.css-utretm > div:nth-of-type(2),
[data-css-utretm] > div:nth-of-type(2) {
  left: 25px;
}

.css-utretm > div:nth-of-type(3),
[data-css-utretm] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-utretm=""
>
  <div />
  <div />
  <div />
</div>
`;
